@@ -44,6 +44,7 @@
 #include "config/miosix_settings.h"
 #include "kernel/logging.h"
 #include "drivers/serial.h"
+#include "filesystem/file_access.h"
 #include "filesystem/devfs/console_device.h"
 
 namespace miosix {
@@ -118,7 +119,9 @@ void IRQbspInit()
 
 void bspInit2()
 {
-    //Nothing to do
+    #ifdef WITH_FILESYSTEM
+    basicFilesystemSetup();
+    #endif //WITH_FILESYSTEM
 }
 
 //
